add-purchase-price
